# fast-approx

./: .gitignore  index.html  package.json  pnpm-lock.yaml  tsconfig.json
.config/: jest-bench.arena.config.ts  jest-bench.config.ts  jest.config.ts  typedoc.config.cjs  vite.config.js
scripts/: inline-wasm.mjs
src/rust/: Cargo.toml
src/rust/src/: lib.rs
src/ts/: arena.bench.ts  index.ts  transmute.ts
src/ts/experiments/: endianness.ts  log2f_approx.ts
src/ts/math/: log10.ts  log2.ts
src/wasm/: index.ts  wasm-base64.ts
